# shouldertap

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  OPENCORE.md  README.md  RELEASING.md  alembic.ini  pyproject.toml  shouldertap.yaml
.github/workflows/: ci.yml  publish.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
examples/: curl.md
examples/langgraph_agent/: README.md  agent.py  shouldertap_mcp_client.py
examples/openmetadata_sync/: webhook_consumer.py
scripts/: generate_schemas.py
shouldertap/adapters/: __init__.py  base.py  openmetadata.py  webhook.py
shouldertap/cli/: http_client.py  main.py  options.py
shouldertap/cli/commands/: accept.py  ask.py  audit.py  experts.py  init.py  mcp.py  queue.py  reject.py  serve.py
shouldertap/engine/: approval.py  clock.py  contracts.py  delivery.py  facade.py  ids.py  llm.py  registry.py  router.py
shouldertap/engine/asker/: __init__.py
shouldertap/engine/asker/prompts/: draft_question.md
shouldertap/engine/capture/: __init__.py
shouldertap/engine/capture/prompts/: structure_reply.md
shouldertap/engine/scheduler/: core.py  jobs.py
shouldertap/engine/store/: engine.py  mappers.py  migrate.py  models.py  repository.py
shouldertap/engine/transports/: base.py  console.py  slack.py  types.py
shouldertap/mcp/: server.py
shouldertap/migrations/: env.py
shouldertap/sdk/: client.py
shouldertap/server/: app.py  auth.py  deps.py
shouldertap/server/approval_ui/: routes.py
shouldertap/server/approval_ui/static/: index.html
shouldertap/server/routes/: audit.py  consumers.py  experts.py  proposals.py  requests.py  slack_events.py
slack/: manifest.yaml
spec/: LICENSE  protocol.md
spec/schemas/: consumer_registration.json  context_proposal.json  context_request.json
spec/schemas/kinds/: freeform_answer.json  glossary_definition.json
tests/: test_version.py
tests/acceptance/: test_criteria_mapping.py  test_fresh_machine.py  test_golden_path_webhook_and_openmetadata.py  test_lint_and_types.py  test_schema_drift.py  test_wheel_install.py
tests/adapters/: test_openmetadata.py  test_webhook.py
tests/cli/: test_cli.py
tests/engine/: test_approval.py  test_asker.py  test_capture.py  test_delivery.py  test_facade.py  test_llm.py  test_registry.py  test_router.py  test_scheduler.py  test_slack_transport.py  test_store.py  test_transports.py
tests/mcp/: test_server.py
tests/sdk/: test_client.py
tests/server/: test_api.py
