[project]
name = "shouldertap"
version = "0.1.0"
description = "The missing layer between AI agents and the humans who hold undocumented knowledge."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Shadi Copty" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "slack-bolt>=1.20",
    "litellm>=1.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "apscheduler>=3.10,<4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/shouldertap-ai/shouldertap"

[project.scripts]
shtap = "shouldertap.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shouldertap"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.7",
    "types-PyYAML>=6.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["^alembic/"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "slack_bolt.*", "litellm.*", "mcp.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's Depends(...)-as-default-argument is the idiomatic, documented pattern -- not the
# mutable-default-argument footgun B008 exists to catch.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Header"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "live: requires real Slack/LLM credentials",
    "slow: builds a real venv / hits the network -- not part of the fast inner loop",
]
