[project]
name = "shouldertap"
version = "0.1.1"
description = "The missing layer between AI agents and the humans who hold undocumented knowledge."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [{ name = "Shadi Copty" }]
keywords = ["slack", "ai-agents", "mcp", "knowledge-management", "human-in-the-loop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
# These lower bounds are verified, not guessed: CI's `min-deps` job resolves every direct
# dependency to its floor (`uv sync --resolution lowest-direct`) and runs the suite there.
# Several of these were originally too low to actually work -- see that job before lowering one.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "slack-bolt>=1.20",
    "litellm>=1.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "apscheduler>=3.11,<4",  # 3.10 imports pkg_resources, gone from modern Python
    "pyyaml>=6.0.2",  # 6.0/6.0.1 fail to build on Python 3.12+
    "python-dotenv>=1.0",
    "click>=8.1",
    "httpx>=0.27",
    "mcp>=1.2",  # mcp.server.fastmcp did not exist before 1.2
]

[project.urls]
Homepage = "https://github.com/shouldertap-ai/shouldertap"
Repository = "https://github.com/shouldertap-ai/shouldertap"
Issues = "https://github.com/shouldertap-ai/shouldertap/issues"
Changelog = "https://github.com/shouldertap-ai/shouldertap/releases"

[project.scripts]
shtap = "shouldertap.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shouldertap"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.7",
    "types-PyYAML>=6.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
# Alembic's generated env.py/migration scripts follow their own conventions (module-level
# side effects, untyped `op`/`sa` usage) and aren't application code.
exclude = ["^shouldertap/migrations/"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "slack_bolt.*", "litellm.*", "mcp.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["shouldertap/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's Depends(...)-as-default-argument is the idiomatic, documented pattern -- not the
# mutable-default-argument footgun B008 exists to catch.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Header"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "live: requires real Slack/LLM credentials",
    "slow: builds a real venv / hits the network -- not part of the fast inner loop",
]
